--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Bai 40</title>
   </head>
   <body>
-    <div>Tuhoc.cc</div>
+   <div class="box1">tu hoc cc</div>
+   <div class="box2"></div>
+   <div class="box3"></div> 
   </body>
 </html>
